fix: remove the scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-none {
+  -ms-overflow-style: none; /* IE / Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
